Fix: btn-container alignment and margin

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -64,6 +64,8 @@ nav {
     display: flex;
     flex-wrap: wrap;
     align-self: flex-start;
+    margin: 0 auto;
+    justify-content: center;
 }
 .main-btn {
     border-radius: 30px;
